# enjima-library

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  suppressions.tsan
.github/workflows/: cmake-single-platform.yml
enjima/core/: ExecutionPlan.cpp  ExecutionPlan.h  JobHandler.cpp  JobHandler.h  OutputCollector.cpp  StreamingPipeline.cpp  StreamingPipeline.h
enjima/memory/: AdaptiveMemoryAllocator.cpp  AdaptiveMemoryAllocator.h  BadMemoryOperation.h  BasicMemoryAllocator.cpp  BasicMemoryAllocator.h  MemoryAllocationCoordinator.cpp  MemoryBlock.cpp  MemoryChunk.cpp  MemoryManager.cpp
enjima/metrics/: PeriodicMetricsLogger.cpp  Profiler.cpp  SystemMetricsProfiler.cpp
enjima/metrics/types/: Counter.cpp  CpuGauge.cpp  DoubleAverageGauge.cpp  OperatorCostGauge.cpp  OperatorCpuTimeGauge.cpp  OperatorScheduledCountGauge.cpp  OperatorSelectivityGauge.cpp  PendingInputEventsGauge.cpp  ThroughputGauge.cpp
enjima/operators/: StreamingOperator.cpp
enjima/runtime/: AlreadyExistsException.h  ConfigurationException.h  DataStream.h  DataStream.tpp  ExecutionEngine.cpp  IllegalStateException.h  InitializationException.h  JobValidationException.h  RuntimeConfiguration.cpp  RuntimeConfiguration.h  RuntimeUtil.cpp  StreamingJob.cpp  StreamingTask.cpp
enjima/runtime/scheduling/: InternalSchedulingTypes.fwd.h  OperatorContext.cpp  OperatorContext.h  OperatorPrecedenceTracker.h  OperatorPrecedenceTracker.tpp  PreemptivePriorityScheduler.tpp  PriorityPrecedenceTracker.cpp  PriorityPrecedenceTracker.h  PriorityPrecedenceTracker.tpp  PriorityScheduler.h  PriorityScheduler.tpp  Scheduler.cpp  Scheduler.h  SchedulingContext.cpp  SchedulingContext.h  SchedulingDecisionContext.cpp  SchedulingDecisionContext.h  SchedulingInternals.fwd.h  SchedulingQueue.cpp  SchedulingQueue.h  StateBasedTask.cpp  StateBasedTask.h  StateBasedTaskRunner.h  StateBasedTaskRunner.tpp  ThreadBasedTask.cpp  ThreadBasedTask.h  ThreadBasedTaskRunner.h  ThreadBasedTaskRunner.tpp
enjima/runtime/scheduling/policy/: AdaptivePriorityCalculator.cpp  AdaptivePriorityCalculator.h  FCFSPriorityCalculator.cpp  FCFSPriorityCalculator.h  InputSizeBasedPriorityCalculator.cpp  InputSizeBasedPriorityCalculator.h  LatencyOptimizedPriorityCalculator.cpp  LatencyOptimizedPriorityCalculator.h  LeastRecentOperatorPriorityCalculator.cpp  LeastRecentOperatorPriorityCalculator.h  MetricsBasedPriorityCalculator.h  NonPreemptiveMode.cpp  NonPreemptiveMode.h  NonPreemptiveSimpleLatencyMode.cpp  NonPreemptiveSimpleLatencyMode.h  NonPreemptiveThroughputOptimizedMode.cpp  NonPreemptiveThroughputOptimizedMode.h  PreemptiveMode.cpp  PreemptiveMode.h  RoundRobinPriorityCalculator.cpp  RoundRobinPriorityCalculator.h  SPLatencyOptimizedPriorityCalculator.cpp  SPLatencyOptimizedPriorityCalculator.h  SchedulingPolicy.cpp  SchedulingPolicy.h  SchedulingPreemptMode.h  SimpleLatencyPriorityCalculator.cpp  SimpleLatencyPriorityCalculator.h  SimpleThroughputPriorityCalculator.cpp  SimpleThroughputPriorityCalculator.h  ThroughputOptimizedPriorityCalculator.cpp  ThroughputOptimizedPriorityCalculator.h
google-tests/: CMakeLists.txt
google-tests/common/: HelperFunctions.h  HelperTypes.h  InputGenerationHelper.h  TestSetupHelperFunctions.cpp  TestSetupHelperFunctions.h  TestSetupHelperFunctions.tpp
google-tests/lib/: CONTRIBUTING.md  README.md
google-tests/lib/docs/: advanced.md  faq.md  gmock_cook_book.md  gmock_for_dummies.md  primer.md  quickstart-bazel.md  quickstart-cmake.md
google-tests/lib/docs/reference/: matchers.md  testing.md
google-tests/lib/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h  gmock-more-matchers.h  gmock-nice-strict.h  gmock-spec-builders.h
google-tests/lib/googlemock/src/: gmock-internal-utils.cc  gmock.cc
google-tests/lib/googletest/cmake/: internal_utils.cmake
google-tests/lib/googletest/include/gtest/: gtest-death-test.h  gtest-matchers.h  gtest-param-test.h  gtest-printers.h  gtest.h
google-tests/lib/googletest/include/gtest/internal/: gtest-internal.h  gtest-param-util.h  gtest-port.h
google-tests/lib/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
google-tests/lib/googletest/test/: BUILD.bazel
google-tests/memory/: MemoryChunkTest.cpp  MemoryManagerTest.cpp
google-tests/metrics/: MetricLoggingTest.cpp
google-tests/operators/: OperatorTypesTest.cpp
google-tests/runtime/: ExecutionEngineTest.cpp  FixedRateGenerationTest.cpp  GenericOperatorTest.cpp  MultiQueryTest.cpp  OperatorProcessingValidityTest.cpp  QueueOperatorTest.cpp
google-tests/runtime/scheduling/: PrioritySchedulingTest.cpp  RoundRobinSchedulingTest.cpp  ThreadBasedSchedulingTest.cpp
sample-configs/conf/: enjima-config.yaml.sample
